# Smart_Home_System

./: CMakeLists.txt  README.md  lv_conf.h  main.c  智能家居系统开发步骤.md
Smart-Home-MQTT-Control/: README.md  index.html  package-lock.json  连接控制说明.md
Smart-Home-MQTT-Control/src/: main.ts
Smart-Home-MQTT-Control/src/components/: MqttDemo.css  MqttDemo.vue
libs/cJSON/: README.md
libs/curl/lib/pkgconfig/: libcurl.pc
libs/libpng_ARM/: pnglibconf.c
libs/mosquitto/lib/pkgconfig/: libmosquitto.pc
